--- a/package.json
+++ b/package.json
@@ -1,21 +1,40 @@
 {
-  "name": "svelte-app",
+  "name": "keyboard",
   "version": "1.0.0",
-  "devDependencies": {
-    "npm-run-all": "^4.1.3",
-    "rollup": "^0.66.2",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-svelte": "^4.3.1",
-    "rollup-plugin-terser": "^3.0.0",
-    "sirv-cli": "^0.2.2",
-    "svelte": "^2.13.5"
-  },
   "scripts": {
     "build": "rollup -c",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public",
-    "start:dev": "sirv public --dev"
-  }
+    "dev": "rollup -c -w",
+    "start": "sirv public"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-typescript": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-svelte3": "^2.7.3",
+    "rollup": "^1.20.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "sirv-cli": "^0.4.4"
+  },
+  "description": "Генератор клавиатуры для VK",
+  "main": "rollup.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SevereCloud/vk-keyboard.git"
+  },
+  "author": "SevereCloud",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/SevereCloud/vk-keyboard/issues"
+  },
+  "homepage": "https://github.com/SevereCloud/vk-keyboard#readme"
 }
