--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.5"
+    "rollup-plugin-postcss": "^2.5.0",
+    "sirv-cli": "^0.4.5",
+    "svelte-highlight": "^0.5.0"
   },
   "description": "Генератор клавиатуры для VK",
   "main": "rollup.config.js",
