--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,27 @@
 {
-  "include": ["src/**/*"],
-  "exclude": ["node_modules/*"],
   "compilerOptions": {
-      "target": "ESNEXT",
-      "module": "ESNEXT", 
-      // "strict": true,
-      "moduleResolution": "node",
-      "types": ["svelte"],
-      "allowSyntheticDefaultImports": true,
-      "esModuleInterop": true
-      // "lib": ["es2015", "es2017", "dom"]
-  }
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "target": "ES2021"
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
