--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build 🔧
         run: |
-          npm build
+          npm run build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
