--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -10,14 +10,8 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install 🔆
-        run: |
-          npm install
+      - name: Node setup
+        uses: ./.github/actions/node-setup
 
       - name: Build 🔧
         run: |
