build: update deps

--- a/package.json
+++ b/package.json
@@ -6,33 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "test": "echo \"no test\"",
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15",
     "@types/uuid": "^10",
-    "@vkontakte/icons": "^2",
+    "@vkontakte/icons": "^3",
     "@vkontakte/vkui": "^7",
     "@vkontakte/vkui-tokens": "^4",
     "eslint": "^9",
-    "eslint-config-next": "^15",
-    "eslint-config-prettier": "^9",
-    "next": "^15.5.9",
+    "eslint-config-next": "^16",
+    "eslint-config-prettier": "^10",
+    "next": "^16",
     "patch-package": "^8",
     "prettier": "^3",
     "react": "^19",
     "react-dom": "^19",
-    "react-syntax-highlighter": "^15",
+    "react-syntax-highlighter": "^16",
     "signal-polyfill": "^0.1",
     "signal-utils": "^0.18",
     "typescript": "^5",
     "use-signals": "^0.1",
-    "uuid": "^11"
+    "uuid": "^13"
   },
   "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
